less/bootstrap-theme/panels.less
/* ... */
.panel-title {
    font-size: @panel-heading-size;
}

.panel-section-title {
    font-size: @panel-section-heading-size;
    line-height: ceil((@panel-section-heading-size * 1.125));
    margin: 0;
}

.panel-table {
    .panel-body {
        padding: 0;
    }
}

// Contextual variations
.panel-accent {
    .panel-variant(@panel-accent-border; @panel-accent-text; @panel-accent-heading-bg; @panel-accent-border);
}

.panel {
    &.panel-default,
    &.panel-primary,
    &.panel-accent,
    &.panel-success,
    &.panel-info,
    &.panel-warning,
    &.panel-danger {
        > .panel-heading {
            border-color: @panel-inner-border;

            .panel-actions {
                color: @text-color;
            }
        }
    }
}

@media (max-width: (@screen-xs-min - 1)) {
    .panel {
        > .panel-section {
            > .panel-row {
                > .panel-cell {
                    > .panel-cell-wrapper {
                        display: block;

                        > .control-label {
                            display: inline-block;
                            width: auto;
                            text-align: left;

                            + .block-control {
                                padding-left: 0;
                            }
                        }

                        > .block-control {
                            display: block;
                            width: 100%;
                        }

                        > .panel-block-help {
                            display: inline-block;
                        }
                    }
                }
            }
        }
    }
}

@media screen and (max-width: @screen-xs-max) {
    .panel {
        .table-responsive {
            margin-bottom: 0;
            border: none;
        }
    }
}

@media (max-width: @screen-xs-max) {
    .col-xs-12,
    .col-sm-12,
    .col-md-12,
    .col-lg-12 {
        > .panel {
            &.panel-main {
                margin-left: -(ceil((@grid-gutter-width / 2)));
                margin-right: -(floor((@grid-gutter-width / 2)));
            }
        }
    }
}

@media (min-width: @screen-sm-min) {
    // fix vertical align of last cell
    .panel-row:first-child,
    .panel-section-heading + .panel-row {
        .panel-cell:not(.panel-cell-pref) {
            &:last-child {
                margin-top: -5px;
            }
        }
    }
}


// Variantes
// -------------------------

.panel-variant-box(primary, @brand-primary, @brand-primary, lighten(@brand-primary, 3%), #fff);
.panel-variant-box(accent, @brand-accent, @brand-accent, lighten(@brand-accent, 3%), #fff);
.panel-variant-box(success, @brand-success, @brand-success, lighten(@brand-success, 3%), #fff);
.panel-variant-box(info, @brand-info, @brand-info, lighten(@brand-info, 3%), #fff);
.panel-variant-box(warning, @brand-warning, @brand-warning, lighten(@brand-warning, 3%), #fff);
.panel-variant-box(danger, @brand-danger, @brand-danger, lighten(@brand-danger, 3%), #fff);

.panel-variant-top(default, @brand-primary, @panel-top-border-height);
.panel-variant-top(primary, @brand-primary, @panel-top-border-height);
.panel-variant-top(accent, @brand-accent, @panel-top-border-height);
.panel-variant-top(success, @brand-success, @panel-top-border-height);
.panel-variant-top(info, @brand-info, @panel-top-border-height);
.panel-variant-top(warning, @brand-warning, @panel-top-border-height);
.panel-variant-top(danger, @brand-danger, @panel-top-border-height);

.panel-variant-wire(default, @text-color);
.panel-variant-wire(primary, @brand-primary);
.panel-variant-wire(accent, @brand-accent);
.panel-variant-wire(success, @brand-success);
.panel-variant-wire(info, @brand-info);
.panel-variant-wire(warning, @brand-warning);
.panel-variant-wire(danger, @brand-danger);

.panel-variant-frame(default, @text-color);
.panel-variant-frame(primary, @brand-primary);
.panel-variant-frame(accent, @brand-accent);
.panel-variant-frame(success, @brand-success);
.panel-variant-frame(info, @brand-info);
.panel-variant-frame(warning, @brand-warning);
.panel-variant-frame(danger, @brand-danger);

.panel-variant-lite(default, @text-color);
.panel-variant-lite(primary, @brand-primary);
.panel-variant-lite(accent, @brand-accent);
.panel-variant-lite(success, @brand-success);
.panel-variant-lite(info, @brand-info);
.panel-variant-lite(warning, @brand-warning);
.panel-variant-lite(danger, @brand-danger);

.panel-variant-pref(default, @text-color);
.panel-variant-pref(primary, @brand-primary);
.panel-variant-pref(accent, @brand-accent);
.panel-variant-pref(success, @brand-success);
.panel-variant-pref(info, @brand-info);
.panel-variant-pref(warning, @brand-warning);
.panel-variant-pref(danger, @brand-danger);

.panel-variant-label(default, @text-color);
.panel-variant-label(primary, @brand-primary);
.panel-variant-label(accent, @brand-accent);
.panel-variant-label(success, @brand-success);
.panel-variant-label(info, @brand-info);
.panel-variant-label(warning, @brand-warning);
.panel-variant-label(danger, @brand-danger);

